parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    COMMENT
    UMINUS

Grammar

Rule 0     S' -> program
Rule 1     program -> function_declarations
Rule 2     program -> global_declarations function_declarations
Rule 3     global_declarations -> global_declarations global_declaration
Rule 4     global_declarations -> global_declaration
Rule 5     global_declarations -> <empty>
Rule 6     global_declaration -> variable_decl
Rule 7     global_declaration -> function_init
Rule 8     function_init -> FUN name LPAREN parameter_list RPAREN return_type SEMICOLON
Rule 9     function_declarations -> function_declarations function_decl
Rule 10    function_declarations -> function_decl
Rule 11    function_decl -> FUN name LPAREN parameter_list RPAREN return_type body
Rule 12    return_type -> DECLARE type_or_arraytype
Rule 13    return_type -> <empty>
Rule 14    variable_decl -> modifier name DECLARE type_or_arraytype ASSIGN expression SEMICOLON
Rule 15    modifier -> VAR
Rule 16    modifier -> VAL
Rule 17    body -> LBRACE statement_list RBRACE
Rule 18    statement_list -> statement_list statement
Rule 19    statement_list -> statement
Rule 20    statement -> if
Rule 21    statement -> while
Rule 22    statement -> variable_decl
Rule 23    statement -> assignment
Rule 24    statement -> function_call_inline SEMICOLON
Rule 25    statement -> print SEMICOLON
Rule 26    statement -> <empty>
Rule 27    if -> IF expression body else
Rule 28    else -> ELSE body
Rule 29    else -> <empty>
Rule 30    while -> WHILE expression body
Rule 31    type_or_arraytype -> type
Rule 32    type_or_arraytype -> LBRACKET type RBRACKET
Rule 33    type_or_arraytype -> LBRACKET LBRACKET type RBRACKET RBRACKET
Rule 34    type -> TVOID
Rule 35    type -> TINT
Rule 36    type -> TSTRING
Rule 37    type -> TBOOLEAN
Rule 38    type -> TCHAR
Rule 39    type -> TFLOAT
Rule 40    function_call_inline -> name LPAREN argument_list RPAREN
Rule 41    print -> print_type LPAREN value RPAREN
Rule 42    print_type -> PRINT_INT
Rule 43    print_type -> PRINT_FLOAT
Rule 44    print_type -> PRINT_ARRAYINT
Rule 45    print_type -> PRINT_ARRAYINT2
Rule 46    print_type -> PRINT_STRING
Rule 47    print_type -> PRINT_CHAR
Rule 48    print_type -> PRINT_BOOLEAN
Rule 49    parameter_list -> parameter COMMA parameter_list
Rule 50    parameter_list -> parameter
Rule 51    parameter_list -> <empty>
Rule 52    argument_list -> argument COMMA argument_list
Rule 53    argument_list -> argument
Rule 54    argument_list -> <empty>
Rule 55    parameter -> modifier name DECLARE type_or_arraytype
Rule 56    argument -> expression
Rule 57    expression -> expression and_or expression_m
Rule 58    expression -> expression_m
Rule 59    expression_m -> expression_s
Rule 60    expression_m -> MINUS expression_m
Rule 61    expression_m -> expression_m sign expression_s
Rule 62    expression_s -> value
Rule 63    expression_s -> expression_s psign value
Rule 64    and_or -> AND
Rule 65    and_or -> OR
Rule 66    psign -> TIMES
Rule 67    psign -> DIVIDE
Rule 68    sign -> PLUS
Rule 69    sign -> MINUS
Rule 70    sign -> EXPONENT
Rule 71    sign -> REMAINDER
Rule 72    sign -> EQUALS
Rule 73    sign -> NOTEQUALS
Rule 74    sign -> GE
Rule 75    sign -> GT
Rule 76    sign -> LE
Rule 77    sign -> LT
Rule 78    value -> name
Rule 79    value -> boolean
Rule 80    value -> int
Rule 81    value -> float
Rule 82    value -> string
Rule 83    value -> char
Rule 84    value -> void
Rule 85    value -> function_call_inline
Rule 86    value -> array_call_inline
Rule 87    value -> NOT name
Rule 88    value -> LPAREN expression RPAREN
Rule 89    assignment -> array_call_or_name ASSIGN expression SEMICOLON
Rule 90    array_call_or_name -> name
Rule 91    array_call_or_name -> array_call_inline
Rule 92    array_call_inline -> name LBRACKET value RBRACKET
Rule 93    array_call_inline -> name LBRACKET value RBRACKET LBRACKET value RBRACKET
Rule 94    name -> NAME
Rule 95    boolean -> TRUE
Rule 96    boolean -> FALSE
Rule 97    int -> INT
Rule 98    float -> FLOAT
Rule 99    string -> STRING
Rule 100   char -> CHAR
Rule 101   void -> VOID

Terminals, with rules where they appear

AND                  : 64
ASSIGN               : 14 89
BOOLEAN              : 
CHAR                 : 100
COMMA                : 49 52
COMMENT              : 
DECLARE              : 12 14 55
DIVIDE               : 67
ELSE                 : 28
EQUALS               : 72
EXPONENT             : 70
FALSE                : 96
FLOAT                : 98
FUN                  : 8 11
GE                   : 74
GT                   : 75
IF                   : 27
INT                  : 97
LBRACE               : 17
LBRACKET             : 32 33 33 92 93 93
LE                   : 76
LPAREN               : 8 11 40 41 88
LT                   : 77
MINUS                : 60 69
NAME                 : 94
NOT                  : 87
NOTEQUALS            : 73
OR                   : 65
PLUS                 : 68
PRINT_ARRAYINT       : 44
PRINT_ARRAYINT2      : 45
PRINT_BOOLEAN        : 48
PRINT_CHAR           : 47
PRINT_FLOAT          : 43
PRINT_INT            : 42
PRINT_STRING         : 46
RBRACE               : 17
RBRACKET             : 32 33 33 92 93 93
REMAINDER            : 71
RPAREN               : 8 11 40 41 88
SEMICOLON            : 8 14 24 25 89
STRING               : 99
TBOOLEAN             : 37
TCHAR                : 38
TFLOAT               : 39
TIMES                : 66
TINT                 : 35
TRUE                 : 95
TSTRING              : 36
TVOID                : 34
UMINUS               : 
VAL                  : 16
VAR                  : 15
VOID                 : 101
WHILE                : 30
error                : 

Nonterminals, with rules where they appear

and_or               : 57
argument             : 52 53
argument_list        : 40 52
array_call_inline    : 86 91
array_call_or_name   : 89
assignment           : 23
body                 : 11 27 28 30
boolean              : 79
char                 : 83
else                 : 27
expression           : 14 27 30 56 57 88 89
expression_m         : 57 58 60 61
expression_s         : 59 61 63
float                : 81
function_call_inline : 24 85
function_decl        : 9 10
function_declarations : 1 2 9
function_init        : 7
global_declaration   : 3 4
global_declarations  : 2 3
if                   : 20
int                  : 80
modifier             : 14 55
name                 : 8 11 14 40 55 78 87 90 92 93
parameter            : 49 50
parameter_list       : 8 11 49
print                : 25
print_type           : 41
program              : 0
psign                : 63
return_type          : 8 11
sign                 : 61
statement            : 18 19
statement_list       : 17 18
string               : 82
type                 : 31 32 33
type_or_arraytype    : 12 14 55
value                : 41 62 63 92 93 93
variable_decl        : 6 22
void                 : 84
while                : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_declarations
    (2) program -> . global_declarations function_declarations
    (9) function_declarations -> . function_declarations function_decl
    (10) function_declarations -> . function_decl
    (3) global_declarations -> . global_declarations global_declaration
    (4) global_declarations -> . global_declaration
    (5) global_declarations -> .
    (11) function_decl -> . FUN name LPAREN parameter_list RPAREN return_type body
    (6) global_declaration -> . variable_decl
    (7) global_declaration -> . function_init
    (14) variable_decl -> . modifier name DECLARE type_or_arraytype ASSIGN expression SEMICOLON
    (8) function_init -> . FUN name LPAREN parameter_list RPAREN return_type SEMICOLON
    (15) modifier -> . VAR
    (16) modifier -> . VAL

  ! shift/reduce conflict for FUN resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for VAL resolved as shift
    FUN             shift and go to state 6
    VAR             shift and go to state 10
    VAL             shift and go to state 11

  ! FUN             [ reduce using rule 5 (global_declarations -> .) ]
  ! VAR             [ reduce using rule 5 (global_declarations -> .) ]
  ! VAL             [ reduce using rule 5 (global_declarations -> .) ]

    program                        shift and go to state 1
    function_declarations          shift and go to state 2
    global_declarations            shift and go to state 3
    function_decl                  shift and go to state 4
    global_declaration             shift and go to state 5
    variable_decl                  shift and go to state 7
    function_init                  shift and go to state 8
    modifier                       shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> function_declarations .
    (9) function_declarations -> function_declarations . function_decl
    (11) function_decl -> . FUN name LPAREN parameter_list RPAREN return_type body

    $end            reduce using rule 1 (program -> function_declarations .)
    FUN             shift and go to state 13

    function_decl                  shift and go to state 12

state 3

    (2) program -> global_declarations . function_declarations
    (3) global_declarations -> global_declarations . global_declaration
    (9) function_declarations -> . function_declarations function_decl
    (10) function_declarations -> . function_decl
    (6) global_declaration -> . variable_decl
    (7) global_declaration -> . function_init
    (11) function_decl -> . FUN name LPAREN parameter_list RPAREN return_type body
    (14) variable_decl -> . modifier name DECLARE type_or_arraytype ASSIGN expression SEMICOLON
    (8) function_init -> . FUN name LPAREN parameter_list RPAREN return_type SEMICOLON
    (15) modifier -> . VAR
    (16) modifier -> . VAL

    FUN             shift and go to state 6
    VAR             shift and go to state 10
    VAL             shift and go to state 11

    function_declarations          shift and go to state 14
    global_declaration             shift and go to state 15
    function_decl                  shift and go to state 4
    variable_decl                  shift and go to state 7
    function_init                  shift and go to state 8
    modifier                       shift and go to state 9

state 4

    (10) function_declarations -> function_decl .

    FUN             reduce using rule 10 (function_declarations -> function_decl .)
    $end            reduce using rule 10 (function_declarations -> function_decl .)


state 5

    (4) global_declarations -> global_declaration .

    FUN             reduce using rule 4 (global_declarations -> global_declaration .)
    VAR             reduce using rule 4 (global_declarations -> global_declaration .)
    VAL             reduce using rule 4 (global_declarations -> global_declaration .)


state 6

    (11) function_decl -> FUN . name LPAREN parameter_list RPAREN return_type body
    (8) function_init -> FUN . name LPAREN parameter_list RPAREN return_type SEMICOLON
    (94) name -> . NAME

    NAME            shift and go to state 17

    name                           shift and go to state 16

state 7

    (6) global_declaration -> variable_decl .

    FUN             reduce using rule 6 (global_declaration -> variable_decl .)
    VAR             reduce using rule 6 (global_declaration -> variable_decl .)
    VAL             reduce using rule 6 (global_declaration -> variable_decl .)


state 8

    (7) global_declaration -> function_init .

    FUN             reduce using rule 7 (global_declaration -> function_init .)
    VAR             reduce using rule 7 (global_declaration -> function_init .)
    VAL             reduce using rule 7 (global_declaration -> function_init .)


state 9

    (14) variable_decl -> modifier . name DECLARE type_or_arraytype ASSIGN expression SEMICOLON
    (94) name -> . NAME

    NAME            shift and go to state 17

    name                           shift and go to state 18

state 10

    (15) modifier -> VAR .

    NAME            reduce using rule 15 (modifier -> VAR .)


state 11

    (16) modifier -> VAL .

    NAME            reduce using rule 16 (modifier -> VAL .)


state 12

    (9) function_declarations -> function_declarations function_decl .

    FUN             reduce using rule 9 (function_declarations -> function_declarations function_decl .)
    $end            reduce using rule 9 (function_declarations -> function_declarations function_decl .)


state 13

    (11) function_decl -> FUN . name LPAREN parameter_list RPAREN return_type body
    (94) name -> . NAME

    NAME            shift and go to state 17

    name                           shift and go to state 19

state 14

    (2) program -> global_declarations function_declarations .
    (9) function_declarations -> function_declarations . function_decl
    (11) function_decl -> . FUN name LPAREN parameter_list RPAREN return_type body

    $end            reduce using rule 2 (program -> global_declarations function_declarations .)
    FUN             shift and go to state 13

    function_decl                  shift and go to state 12

state 15

    (3) global_declarations -> global_declarations global_declaration .

    FUN             reduce using rule 3 (global_declarations -> global_declarations global_declaration .)
    VAR             reduce using rule 3 (global_declarations -> global_declarations global_declaration .)
    VAL             reduce using rule 3 (global_declarations -> global_declarations global_declaration .)


state 16

    (11) function_decl -> FUN name . LPAREN parameter_list RPAREN return_type body
    (8) function_init -> FUN name . LPAREN parameter_list RPAREN return_type SEMICOLON

    LPAREN          shift and go to state 20


state 17

    (94) name -> NAME .

    LPAREN          reduce using rule 94 (name -> NAME .)
    DECLARE         reduce using rule 94 (name -> NAME .)
    LBRACKET        reduce using rule 94 (name -> NAME .)
    TIMES           reduce using rule 94 (name -> NAME .)
    DIVIDE          reduce using rule 94 (name -> NAME .)
    PLUS            reduce using rule 94 (name -> NAME .)
    MINUS           reduce using rule 94 (name -> NAME .)
    EXPONENT        reduce using rule 94 (name -> NAME .)
    REMAINDER       reduce using rule 94 (name -> NAME .)
    EQUALS          reduce using rule 94 (name -> NAME .)
    NOTEQUALS       reduce using rule 94 (name -> NAME .)
    GE              reduce using rule 94 (name -> NAME .)
    GT              reduce using rule 94 (name -> NAME .)
    LE              reduce using rule 94 (name -> NAME .)
    LT              reduce using rule 94 (name -> NAME .)
    SEMICOLON       reduce using rule 94 (name -> NAME .)
    AND             reduce using rule 94 (name -> NAME .)
    OR              reduce using rule 94 (name -> NAME .)
    RPAREN          reduce using rule 94 (name -> NAME .)
    COMMA           reduce using rule 94 (name -> NAME .)
    LBRACE          reduce using rule 94 (name -> NAME .)
    RBRACKET        reduce using rule 94 (name -> NAME .)
    ASSIGN          reduce using rule 94 (name -> NAME .)


state 18

    (14) variable_decl -> modifier name . DECLARE type_or_arraytype ASSIGN expression SEMICOLON

    DECLARE         shift and go to state 21


state 19

    (11) function_decl -> FUN name . LPAREN parameter_list RPAREN return_type body

    LPAREN          shift and go to state 22


state 20

    (11) function_decl -> FUN name LPAREN . parameter_list RPAREN return_type body
    (8) function_init -> FUN name LPAREN . parameter_list RPAREN return_type SEMICOLON
    (49) parameter_list -> . parameter COMMA parameter_list
    (50) parameter_list -> . parameter
    (51) parameter_list -> .
    (55) parameter -> . modifier name DECLARE type_or_arraytype
    (15) modifier -> . VAR
    (16) modifier -> . VAL

    RPAREN          reduce using rule 51 (parameter_list -> .)
    VAR             shift and go to state 10
    VAL             shift and go to state 11

    parameter_list                 shift and go to state 23
    parameter                      shift and go to state 24
    modifier                       shift and go to state 25

state 21

    (14) variable_decl -> modifier name DECLARE . type_or_arraytype ASSIGN expression SEMICOLON
    (31) type_or_arraytype -> . type
    (32) type_or_arraytype -> . LBRACKET type RBRACKET
    (33) type_or_arraytype -> . LBRACKET LBRACKET type RBRACKET RBRACKET
    (34) type -> . TVOID
    (35) type -> . TINT
    (36) type -> . TSTRING
    (37) type -> . TBOOLEAN
    (38) type -> . TCHAR
    (39) type -> . TFLOAT

    LBRACKET        shift and go to state 28
    TVOID           shift and go to state 29
    TINT            shift and go to state 30
    TSTRING         shift and go to state 31
    TBOOLEAN        shift and go to state 32
    TCHAR           shift and go to state 33
    TFLOAT          shift and go to state 34

    type_or_arraytype              shift and go to state 26
    type                           shift and go to state 27

state 22

    (11) function_decl -> FUN name LPAREN . parameter_list RPAREN return_type body
    (49) parameter_list -> . parameter COMMA parameter_list
    (50) parameter_list -> . parameter
    (51) parameter_list -> .
    (55) parameter -> . modifier name DECLARE type_or_arraytype
    (15) modifier -> . VAR
    (16) modifier -> . VAL

    RPAREN          reduce using rule 51 (parameter_list -> .)
    VAR             shift and go to state 10
    VAL             shift and go to state 11

    parameter_list                 shift and go to state 35
    parameter                      shift and go to state 24
    modifier                       shift and go to state 25

state 23

    (11) function_decl -> FUN name LPAREN parameter_list . RPAREN return_type body
    (8) function_init -> FUN name LPAREN parameter_list . RPAREN return_type SEMICOLON

    RPAREN          shift and go to state 36


state 24

    (49) parameter_list -> parameter . COMMA parameter_list
    (50) parameter_list -> parameter .

    COMMA           shift and go to state 37
    RPAREN          reduce using rule 50 (parameter_list -> parameter .)


state 25

    (55) parameter -> modifier . name DECLARE type_or_arraytype
    (94) name -> . NAME

    NAME            shift and go to state 17

    name                           shift and go to state 38

state 26

    (14) variable_decl -> modifier name DECLARE type_or_arraytype . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 39


state 27

    (31) type_or_arraytype -> type .

    ASSIGN          reduce using rule 31 (type_or_arraytype -> type .)
    SEMICOLON       reduce using rule 31 (type_or_arraytype -> type .)
    LBRACE          reduce using rule 31 (type_or_arraytype -> type .)
    COMMA           reduce using rule 31 (type_or_arraytype -> type .)
    RPAREN          reduce using rule 31 (type_or_arraytype -> type .)


state 28

    (32) type_or_arraytype -> LBRACKET . type RBRACKET
    (33) type_or_arraytype -> LBRACKET . LBRACKET type RBRACKET RBRACKET
    (34) type -> . TVOID
    (35) type -> . TINT
    (36) type -> . TSTRING
    (37) type -> . TBOOLEAN
    (38) type -> . TCHAR
    (39) type -> . TFLOAT

    LBRACKET        shift and go to state 40
    TVOID           shift and go to state 29
    TINT            shift and go to state 30
    TSTRING         shift and go to state 31
    TBOOLEAN        shift and go to state 32
    TCHAR           shift and go to state 33
    TFLOAT          shift and go to state 34

    type                           shift and go to state 41

state 29

    (34) type -> TVOID .

    ASSIGN          reduce using rule 34 (type -> TVOID .)
    RBRACKET        reduce using rule 34 (type -> TVOID .)
    SEMICOLON       reduce using rule 34 (type -> TVOID .)
    LBRACE          reduce using rule 34 (type -> TVOID .)
    COMMA           reduce using rule 34 (type -> TVOID .)
    RPAREN          reduce using rule 34 (type -> TVOID .)


state 30

    (35) type -> TINT .

    ASSIGN          reduce using rule 35 (type -> TINT .)
    RBRACKET        reduce using rule 35 (type -> TINT .)
    SEMICOLON       reduce using rule 35 (type -> TINT .)
    LBRACE          reduce using rule 35 (type -> TINT .)
    COMMA           reduce using rule 35 (type -> TINT .)
    RPAREN          reduce using rule 35 (type -> TINT .)


state 31

    (36) type -> TSTRING .

    ASSIGN          reduce using rule 36 (type -> TSTRING .)
    RBRACKET        reduce using rule 36 (type -> TSTRING .)
    SEMICOLON       reduce using rule 36 (type -> TSTRING .)
    LBRACE          reduce using rule 36 (type -> TSTRING .)
    COMMA           reduce using rule 36 (type -> TSTRING .)
    RPAREN          reduce using rule 36 (type -> TSTRING .)


state 32

    (37) type -> TBOOLEAN .

    ASSIGN          reduce using rule 37 (type -> TBOOLEAN .)
    RBRACKET        reduce using rule 37 (type -> TBOOLEAN .)
    SEMICOLON       reduce using rule 37 (type -> TBOOLEAN .)
    LBRACE          reduce using rule 37 (type -> TBOOLEAN .)
    COMMA           reduce using rule 37 (type -> TBOOLEAN .)
    RPAREN          reduce using rule 37 (type -> TBOOLEAN .)


state 33

    (38) type -> TCHAR .

    ASSIGN          reduce using rule 38 (type -> TCHAR .)
    RBRACKET        reduce using rule 38 (type -> TCHAR .)
    SEMICOLON       reduce using rule 38 (type -> TCHAR .)
    LBRACE          reduce using rule 38 (type -> TCHAR .)
    COMMA           reduce using rule 38 (type -> TCHAR .)
    RPAREN          reduce using rule 38 (type -> TCHAR .)


state 34

    (39) type -> TFLOAT .

    ASSIGN          reduce using rule 39 (type -> TFLOAT .)
    RBRACKET        reduce using rule 39 (type -> TFLOAT .)
    SEMICOLON       reduce using rule 39 (type -> TFLOAT .)
    LBRACE          reduce using rule 39 (type -> TFLOAT .)
    COMMA           reduce using rule 39 (type -> TFLOAT .)
    RPAREN          reduce using rule 39 (type -> TFLOAT .)


